# python-pdf-parser

./: .gitignore  README.md  pdf_parser.py  pyproject.toml
